--- a/examples/web/usage.web.html
+++ b/examples/web/usage.web.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Title</title>
-    <!--    <script src="https://unpkg.com/@dashevo/dashcore-lib"></script>-->
-    <script src="../../dist/dashcore-lib.min.js"></script>
+    <script src="../../dist/raptoreumcore-lib.min.js"></script>
     <script>
       const { PrivateKey } = dashcore;
       const privateKey = new PrivateKey();
